--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react-dom": "^16.9.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5",
     "url-search-params-polyfill": "^8.0.0"
   },
@@ -40,8 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.4",
+    "@types/redux-thunk": "^2.1.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.2.0"
