--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-thunk": "^2.1.0",
+    "cross-env": "^7.0.2",
+    "react-testing-library": "^8.0.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.2.0"
